# FoundationPose

./: pyproject.toml  requirements.txt
